Muokattu Game-luokkaa, luoutu uusia testejä, generoitu uudet pit ja checkstyle-testit

--- a/dokumentaatio/pit-raportti/201702031328/ristirastinolla/index.html
+++ b/dokumentaatio/pit-raportti/201702031328/ristirastinolla/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>ristirastinolla.logiikka</h3>
+<h3>ristirastinolla</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
-            <td>43% <div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">26/61</div></div></td>
-            <td>31% <div class="coverage_bar"><div class="coverage_complete" style="width:31%"></div><div class="coverage_ledgend">19/62</div></div></td>
+            <td>1</td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/7</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,15 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Board.java.html">Board.java</a></td>
-            <td><div class="coveragePercentage">44% </div><div class="coverage_bar"><div class="coverage_complete" style="width:44%"></div><div class="coverage_ledgend">11/25</div></div></td>
-            <td><div class="coveragePercentage">30% </div><div class="coverage_bar"><div class="coverage_complete" style="width:30%"></div><div class="coverage_ledgend">10/33</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Game.java.html">Game.java</a></td>
-            <td><div class="coveragePercentage">42% </div><div class="coverage_bar"><div class="coverage_complete" style="width:42%"></div><div class="coverage_ledgend">15/36</div></div></td>
-            <td><div class="coveragePercentage">31% </div><div class="coverage_bar"><div class="coverage_complete" style="width:31%"></div><div class="coverage_ledgend">9/29</div></div></td>
+            <td><a href="./Main.java.html">Main.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/7</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
         </tr>
 
      </tbody>
