--- a/dokumentaatio/pit-raportti/201702031328/ristirastinolla.logic/index.html
+++ b/dokumentaatio/pit-raportti/201702031328/ristirastinolla.logic/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>ristirastinolla</h3>
+<h3>ristirastinolla.logic</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td>2</td>
+            <td>65% <div class="coverage_bar"><div class="coverage_complete" style="width:65%"></div><div class="coverage_ledgend">66/102</div></div></td>
+            <td>66% <div class="coverage_bar"><div class="coverage_complete" style="width:66%"></div><div class="coverage_ledgend">76/115</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,15 @@
     <tbody>
 
         <tr>
-            <td><a href="./Main.java.html">Main.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td><a href="./Board.java.html">Board.java</a></td>
+            <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">35/45</div></div></td>
+            <td><div class="coveragePercentage">72% </div><div class="coverage_bar"><div class="coverage_complete" style="width:72%"></div><div class="coverage_ledgend">50/69</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Game.java.html">Game.java</a></td>
+            <td><div class="coveragePercentage">54% </div><div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">31/57</div></div></td>
+            <td><div class="coveragePercentage">57% </div><div class="coverage_bar"><div class="coverage_complete" style="width:57%"></div><div class="coverage_ledgend">26/46</div></div></td>
         </tr>
 
      </tbody>
