--- a/dokumentaatio/pit-raportti/201702031328/ristirastinolla.ui/index.html
+++ b/dokumentaatio/pit-raportti/201702031328/ristirastinolla.ui/index.html
@@ -39,7 +39,7 @@
    .coverage_ledgend {
         position : absolute;
         height : 100%;
-        width : 100%;
+        width: 100%;
         left : 0;
         top : 0;
         text-align : center;
@@ -50,9 +50,9 @@
    }
    
    .coveragePercentage {
-    display: inline-block;
-    width: 3em;
-    text-align: right;
+        display: inline-block;
+        width: 3em;
+        text-align: right;
    }
   </style>
   
@@ -60,8 +60,8 @@
 <body>
 
 <h1>Pit Test Coverage Report</h1>
-
-<h3>Project Summary</h3>
+<h2>Package Summary</h2>
+<h3>ristirastinolla.ui</h3>
 <table>
     <thead>
         <tr>
@@ -72,20 +72,19 @@
     </thead>
     <tbody>
         <tr>
-            <td>3</td>
-            <td>40% <div class="coverage_bar"><div class="coverage_complete" style="width:40%"></div><div class="coverage_ledgend">26/65</div></div></td>
-            <td>30% <div class="coverage_bar"><div class="coverage_complete" style="width:30%"></div><div class="coverage_ledgend">19/63</div></div></td>
+            <td>2</td>
+            <td>30% <div class="coverage_bar"><div class="coverage_complete" style="width:30%"></div><div class="coverage_ledgend">6/20</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/10</div></div></td>
         </tr>
     </tbody>
 </table>
 
 
-<h3>Breakdown by Package</h3>
+<h3>Breakdown by Class</h3>
 <table>
     <thead>
         <tr>
             <th>Name</th>
-            <th>Number of Classes</th>
             <th>Line Coverage</th>
             <th>Mutation Coverage</th>
         </tr>
@@ -93,17 +92,15 @@
     <tbody>
 
         <tr>
-            <td><a href="./ristirastinolla/index.html">ristirastinolla</a></td>
-            <td>1</td>
+            <td><a href="./GUI.java.html">GUI.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/8</div></div></td>
             <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
         </tr>
 
         <tr>
-            <td><a href="./ristirastinolla.logiikka/index.html">ristirastinolla.logiikka</a></td>
-            <td>2</td>
-            <td><div class="coveragePercentage">43% </div><div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">26/61</div></div></td>
-            <td><div class="coveragePercentage">31% </div><div class="coverage_bar"><div class="coverage_complete" style="width:31%"></div><div class="coverage_ledgend">19/62</div></div></td>
+            <td><a href="./UI.java.html">UI.java</a></td>
+            <td><div class="coveragePercentage">50% </div><div class="coverage_bar"><div class="coverage_complete" style="width:50%"></div><div class="coverage_ledgend">6/12</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
         </tr>
 
      </tbody>
