Tehty muutoksia koodin GUI-ominaisuuksiin, muuteltu logiikkaa, luotu luokkakaavio ja generoitu testit

--- a/dokumentaatio/pit-raportti/201702081943/ristirastinolla/Main.java.html
+++ b/dokumentaatio/pit-raportti/201702081943/ristirastinolla/Main.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_11'></a>
 <span>
 </span>
 </td>
@@ -217,43 +217,27 @@ body{
 
 
 <tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_12'/>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_12'></a>
 <span>
 </span>
 </td>
-<td class='uncovered'><pre><span  class=''>        Game game = new Game(3, 3, new Board(3, 3)); //Put this into UI/GUI decide what to do!</span></pre></td></tr>
+<td class=''><pre><span  class=''>        //Game game = new Game(3, 3, new Board(3, 3)); //Put this into UI/GUI decide what to do!</span></pre></td></tr>
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_13'/>
 13
-</td>
-<td class='survived'>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_13'>1</a>
-<span>
-1. main : removed call to ristirastinolla/logic/Game::startGame &rarr; NO_COVERAGE<br/>
-
-</span>
-</td>
-<td class='uncovered'><pre><span  class='survived'>        game.startGame();</span></pre></td></tr>
-
-
-<tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_14'/>
-14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_13'></a>
 <span>
 </span>
 </td>
@@ -262,12 +246,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_15'/>
-15
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_14'/>
+14
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_14'>1</a>
 <span>
 1. main : removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE<br/>
 
@@ -278,28 +262,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_16'/>
-16
-</td>
-<td class='survived'>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_16'>1</a>
-<span>
-1. main : removed call to ristirastinolla/ui/GUI::run &rarr; NO_COVERAGE<br/>
-
-</span>
-</td>
-<td class='uncovered'><pre><span  class='survived'>        gui.run();</span></pre></td></tr>
-
-
-<tr>
-<td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_17'/>
-17
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_15'/>
+15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_15'></a>
 <span>
 </span>
 </td>
@@ -308,12 +276,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7397c6_18'/>
-18
+<a name='org.pitest.mutationtest.report.html.SourceFile@64524dd_16'/>
+16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_16'></a>
 <span>
 </span>
 </td>
@@ -324,33 +292,13 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7397c6_13'>13</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@64524dd_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_13'/> 
-
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to ristirastinolla/logic/Game::startGame &rarr; NO_COVERAGE</p> 
-</td>
-</tr>
-<tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7397c6_15'>15</a></td> 
-<td></td>
-<td>
-
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@64524dd_14'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE</p> 
-</td>
-</tr>
-<tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7397c6_16'>16</a></td> 
-<td></td>
-<td>
-
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7397c6_16'/> 
-
-<p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to ristirastinolla/ui/GUI::run &rarr; NO_COVERAGE</p> 
 </td>
 </tr>
 
