--- a/dokumentaatio/pit-raportti/201702171245/index.html
+++ b/dokumentaatio/pit-raportti/201702171245/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>6</td>
-            <td>49% <div class="coverage_bar"><div class="coverage_complete" style="width:49%"></div><div class="coverage_ledgend">72/147</div></div></td>
-            <td>56% <div class="coverage_bar"><div class="coverage_complete" style="width:56%"></div><div class="coverage_ledgend">79/140</div></div></td>
+            <td>8</td>
+            <td>39% <div class="coverage_bar"><div class="coverage_complete" style="width:39%"></div><div class="coverage_ledgend">81/208</div></div></td>
+            <td>48% <div class="coverage_bar"><div class="coverage_complete" style="width:48%"></div><div class="coverage_ledgend">92/190</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -95,22 +95,29 @@
         <tr>
             <td><a href="./ristirastinolla/index.html">ristirastinolla</a></td>
             <td>1</td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
             <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./ristirastinolla.graphics/index.html">ristirastinolla.graphics</a></td>
+            <td>1</td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/31</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/39</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./ristirastinolla.logic/index.html">ristirastinolla.logic</a></td>
             <td>2</td>
-            <td><div class="coveragePercentage">76% </div><div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">66/87</div></div></td>
-            <td><div class="coveragePercentage">76% </div><div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">79/104</div></div></td>
+            <td><div class="coveragePercentage">94% </div><div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">81/86</div></div></td>
+            <td><div class="coveragePercentage">92% </div><div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">92/100</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./ristirastinolla.ui/index.html">ristirastinolla.ui</a></td>
-            <td>3</td>
-            <td><div class="coveragePercentage">11% </div><div class="coverage_bar"><div class="coverage_complete" style="width:11%"></div><div class="coverage_ledgend">6/56</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/35</div></div></td>
+            <td>4</td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/88</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/50</div></div></td>
         </tr>
 
      </tbody>
