--- a/dokumentaatio/pit-raportti/201702171245/ristirastinolla.graphics/index.html
+++ b/dokumentaatio/pit-raportti/201702171245/ristirastinolla.graphics/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>ristirastinolla</h3>
+<h3>ristirastinolla.graphics</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/31</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/39</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Main.java.html">Main.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td><a href="./DrawBoard.java.html">DrawBoard.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/31</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/39</div></div></td>
         </tr>
 
      </tbody>
