--- a/dokumentaatio/pit-raportti/201702171245/ristirastinolla/index.html
+++ b/dokumentaatio/pit-raportti/201702171245/ristirastinolla/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>ristirastinolla.logic</h3>
+<h3>ristirastinolla</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
-            <td>76% <div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">66/87</div></div></td>
-            <td>76% <div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">79/104</div></div></td>
+            <td>1</td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
+            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,15 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Board.java.html">Board.java</a></td>
-            <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">35/45</div></div></td>
-            <td><div class="coveragePercentage">74% </div><div class="coverage_bar"><div class="coverage_complete" style="width:74%"></div><div class="coverage_ledgend">51/69</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Game.java.html">Game.java</a></td>
-            <td><div class="coveragePercentage">74% </div><div class="coverage_bar"><div class="coverage_complete" style="width:74%"></div><div class="coverage_ledgend">31/42</div></div></td>
-            <td><div class="coveragePercentage">80% </div><div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">28/35</div></div></td>
+            <td><a href="./Main.java.html">Main.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
         </tr>
 
      </tbody>
