--- a/dokumentaatio/pit-raportti/201702241107/ristirastinolla.logic/index.html
+++ b/dokumentaatio/pit-raportti/201702241107/ristirastinolla.logic/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>ristirastinolla</h3>
+<h3>ristirastinolla.logic</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td>2</td>
+            <td>95% <div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">72/76</div></div></td>
+            <td>83% <div class="coverage_bar"><div class="coverage_complete" style="width:83%"></div><div class="coverage_ledgend">79/95</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,15 @@
     <tbody>
 
         <tr>
-            <td><a href="./Main.java.html">Main.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/3</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+            <td><a href="./Board.java.html">Board.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">40/40</div></div></td>
+            <td><div class="coveragePercentage">86% </div><div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">54/63</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Game.java.html">Game.java</a></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">32/36</div></div></td>
+            <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">25/32</div></div></td>
         </tr>
 
      </tbody>
