--- a/dokumentaatio/pit-raportti/201702241107/ristirastinolla/Main.java.html
+++ b/dokumentaatio/pit-raportti/201702241107/ristirastinolla/Main.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_4'></a>
 <span>
 </span>
 </td>
@@ -120,40 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_5'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''>import ristirastinolla.logic.Board;</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_6'/>
-6
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_6'></a>
-<span>
-</span>
-</td>
-<td class=''><pre><span  class=''>import ristirastinolla.logic.Game;</span></pre></td></tr>
-
-
-<tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_7'/>
-7
-</td>
-<td class=''>
-<span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_5'></a>
 <span>
 </span>
 </td>
@@ -162,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_8'/>
-8
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_6'/>
+6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_6'></a>
 <span>
 </span>
 </td>
@@ -176,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_9'/>
-9
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_7'/>
+7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_7'></a>
 <span>
 </span>
 </td>
@@ -190,12 +162,26 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_10'/>
-10
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_8'/>
+8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_8'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''> *</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_9'/>
+9
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_9'></a>
 <span>
 </span>
 </td>
@@ -204,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_11'/>
-11
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_10'/>
+10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_10'></a>
 <span>
 </span>
 </td>
@@ -218,12 +204,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_12'/>
-12
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_11'/>
+11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_11'></a>
 <span>
 </span>
 </td>
@@ -232,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_13'/>
-13
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_12'/>
+12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_12'></a>
 <span>
 </span>
 </td>
@@ -246,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_14'/>
-14
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_13'/>
+13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_13'></a>
 <span>
 </span>
 </td>
@@ -260,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_15'/>
-15
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_14'/>
+14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_14'></a>
 <span>
 </span>
 </td>
@@ -274,12 +260,26 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_15'/>
+15
+</td>
+<td class=''>
+<span class='pop'>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_15'></a>
+<span>
+</span>
+</td>
+<td class=''><pre><span  class=''>     *</span></pre></td></tr>
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_20'></a>
 <span>
 </span>
 </td>
@@ -343,43 +343,43 @@ body{
 
 
 <tr>
-<td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_21'/>
+<td class='uncovered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_21'></a>
 <span>
 </span>
 </td>
-<td class=''><pre><span  class=''>        //GUI gui = new GUI();</span></pre></td></tr>
+<td class='uncovered'><pre><span  class=''>        GUI gui = new GUI(9, 9);</span></pre></td></tr>
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_22'/>
 22
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_22'>1</a>
 <span>
 1. main : removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE<br/>
 
 </span>
 </td>
-<td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(new GUI());</span></pre></td></tr>
+<td class='uncovered'><pre><span  class='survived'>        SwingUtilities.invokeLater(gui);</span></pre></td></tr>
 
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_23'></a>
 <span>
 </span>
 </td>
@@ -388,12 +388,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@4cdb8504_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@66420549_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@66420549_24'></a>
 <span>
 </span>
 </td>
@@ -404,11 +404,11 @@ body{
 <tr><td></td><td></td><td><h2>Mutations</h2></td></tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4cdb8504_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@66420549_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4cdb8504_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@66420549_22'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to javax/swing/SwingUtilities::invokeLater &rarr; NO_COVERAGE</p> 
 </td>
